# rust-landing-page

./: README.md  netlify.toml  rustfmt
configs/: tailwind.config.js
crate/: Cargo.toml  rustfmt.toml
crate/src/: lib.rs
crate/src/page/: home.rs  mod.rs
crate/src/page/partial/: footer.rs
css/: styles.css
entries/templates/: social_media.hbs
