[package]
version = "0.1.0"
name = "rust_landing_page"
repository = "https://github.com/hew/rust_landing_page"
authors = ["Matt Jones <matt@hew.tools>"]
description = "Example landing page with Rust"
categories = ["wasm", "rust", "tailwindcss", "seed"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`

[dependencies]
wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
seed = { git = "https://github.com/David-OConnor/seed", branch="master" }
fixed-vec-deque = "0.1.8"
serde = { version = "^1.0.92" }
serde_json = "1.0"
futures = "^0.1.27"
validator = "0.10"
validator_derive = "0.10"

[dependencies.web-sys]
version = "^0.3.28"
features = [
  "ScrollToOptions",
  "Navigator",
  "Storage"
]

[profile.release]
lto = true
opt-level = 's'
